--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,12 @@
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+
+    /* john doe portfolio custom colors starts here  */
+    --theme-blue: 229 100% 65%;
+    --theme-gray: 231 9% 28%;
+    /* john doe portfolio custom colors ends here  */
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
@@ -30,8 +36,7 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
   }
-
-  .dark {
+  tangerine .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
@@ -42,6 +47,13 @@
     --primary-foreground: 222.2 47.4% 11.2%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
+
+    /* john doe portfolio custom colors starts here  */
+    --theme-blue: 229 100% 65%;
+    --theme-gray: 229 9% 28%;
+
+    /* john doe portfolio custom colors ends here  */
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
