--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@
     /* john doe portfolio custom colors starts here  */
     --theme-blue: 229 100% 65%;
     --theme-gray: 231 9% 28%;
-    --them-bg-color: 229, 78%, 98%;
+    --theme-bg-color: 229, 78%, 98%;
+    --theme-black: 229, 5%, 10%;
     /* john doe portfolio custom colors ends here  */
 
     --muted: 210 40% 96.1%;
@@ -52,7 +53,8 @@
     /* john doe portfolio custom colors starts here  */
     --theme-blue: 229 100% 65%;
     --theme-gray: 229 9% 28%;
-    --them-bg-color: 229, 78%, 98%;
+    --theme-bg-color: 229, 78%, 98%;
+    --theme-black: 229, 5%, 10%;
 
     /* john doe portfolio custom colors ends here  */
 
@@ -91,6 +93,24 @@
 .custom-list > li::marker {
   font-size: 1.5rem;
   color: #2563eb;
+}
+
+.clip-path-wave {
+  /* clip-path: polygon(
+    52% 26%,
+    54% 27%,
+    52% 26%,
+    52% 26%,
+    56% 34%,
+    63% 38%,
+    70% 41%,
+    100% 42%,
+    100% 100%,
+    0 100%,
+    0 0,
+    52% 0,
+    52% 17%
+  ); */
 }
 
 @media only screen and (max-width: 600px) {
