--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@
     --theme-gray: 231 9% 28%;
     --theme-bg-color: 229, 78%, 98%;
     --theme-black: 229, 5%, 10%;
+    --theme-light-blue: 229, 100%, 97%;
     /* john doe portfolio custom colors ends here  */
 
     --muted: 210 40% 96.1%;
@@ -55,6 +56,7 @@
     --theme-gray: 229 9% 28%;
     --theme-bg-color: 229, 78%, 98%;
     --theme-black: 229, 5%, 10%;
+    --theme-light-blue: 229, 100%, 97%;
 
     /* john doe portfolio custom colors ends here  */
 
