--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@
     --theme-bg-color: 229, 78%, 98%;
     --theme-black: 229, 5%, 10%;
     --theme-light-blue: 229, 100%, 97%;
+    --theme-menu-color: 229, 15%, 88%;
     /* john doe portfolio custom colors ends here  */
 
     --muted: 210 40% 96.1%;
@@ -57,7 +58,7 @@
     --theme-bg-color: 229, 78%, 98%;
     --theme-black: 229, 5%, 10%;
     --theme-light-blue: 229, 100%, 97%;
-
+    --theme-menu-color: 229, 15%, 88%;
     /* john doe portfolio custom colors ends here  */
 
     --muted: 217.2 32.6% 17.5%;
